radix-engine-tests/tests/dec_macros/src/pdec_err_empty_fractional_part_1.stderr
error: If there is a decimal point, the number must include at least one digit after it.
 --> src/pdec_err_empty_fractional_part_1.rs:4:37
  |
4 |     const X: PreciseDecimal = pdec!(1.);
  |                                     ^^
