radix-engine-tests/tests/dec_macros/src/pdec_err_empty_fractional_part_1.rs
use radix_engine_interface::prelude::*;

fn main() {
    const X: PreciseDecimal = pdec!(1.);
}
